--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <groupId>io.cloudevents</groupId>
     <artifactId>cloudevents-parent</artifactId>
     <name>CloudEvents</name>
-    <version>0.2.2-SNAPSHOT</version>
+    <version>0.2.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <scm>
@@ -59,6 +59,8 @@
         <module>api</module>
         <module>cdi</module>
         <module>http/vertx</module>
+        <module>json-jackson</module>
+        <module>json-fastjson</module>
     </modules>
 
     <properties>
